# gradio-chatbot

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  main.py
src/gradio_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
